--- a/html/index.html
+++ b/html/index.html
@@ -2,55 +2,67 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css">
-  <link rel="stylesheet" href="../styles/master.css">
-  <link href="https://fonts.googleapis.com/css?family=Catamaran:100" rel="stylesheet">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css">
+    <link rel="stylesheet" href="../styles/master.css">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:100" rel="stylesheet">
 </head>
 
 <body>
-  <header>
-    <section id="promotion-container" class="gutters">
-      <li class="shipping">Free Shipping!</div>
-        <li>Plus Spring Savings:</li>
-        <li>$10 off of $50 order!</li>
-        <li>$20 off of $100 order!</li>
-        <li>$30 off of $150 order!</li>
-    </section>
-    <section id="header-container" class="gutters">
-      <div class="box-1">
-        Logo
-      </div>
-      <div class="box-2">
-        Nav
-      </div>
-      <div class="box-3">
-        Account
-      </div>
-    </section>
-  </header>
-  <main>
-    <section id="banner-container">
-      <div class="ties">
-        <div><img src="../assets/black@1.5x.jpg" alt="black-tie">Black</div>
-        <div><img src="../assets/blue@1.5x.jpg" alt="blue-tie">Blue</div>
-        <div><img src="../assets/collegiate@1.5x.jpg" alt="collegiate-tie">Collegiate</div>
-        <div><img src="../assets/cotton@1.5x.jpg" alt="cotton-tie">Cotton</div>
-        <div><img src="../assets/favorites@1.5x.jpg" alt="favorites-tie">Favorites</div>
-        <div><img src="../assets/graphic@1.5x.jpg" alt="graphic-tie">Graphic</div>
-        <div><img src="../assets/plaid@1.5x.jpg" alt="plaid-tie">Plaid</div>
-        <div><img src="../assets/silk@1.5x.jpg" alt="silk-tie">Silk</div>
-        <div><img src="../assets/striped@1.5x.jpg" alt="striped-tie">Striped</div>
-      </div>
-      <h1>Start dressing bettter.</h1>
-    </section>
-    <section id="product-container">
+    <header>
+        <section id="promotion-container" class="gutters">
+            <li class="shipping">Free Shipping!</div>
+                <li>Plus Spring Savings:</li>
+                <li>$10 off of $50 order!</li>
+                <li>$20 off of $100 order!</li>
+                <li>$30 off of $150 order!</li>
+        </section>
+        <section id="header-container" class="gutters">
+            <div class="box-1">
+                Logo
+            </div>
+            <div class="box-2">
+                Nav
+            </div>
+            <div class="box-3">
+                Account
+            </div>
+        </section>
+    </header>
+    <main>
+        <section id="banner-container">
+            <div class="ties">
+                <div><img src="../assets/black@1.5x.jpg" alt="black-tie">Black</div>
+                <div><img src="../assets/blue@1.5x.jpg" alt="blue-tie">Blue</div>
+                <div><img src="../assets/collegiate@1.5x.jpg" alt="collegiate-tie">Collegiate</div>
+                <div><img src="../assets/cotton@1.5x.jpg" alt="cotton-tie">Cotton</div>
+                <div><img src="../assets/favorites@1.5x.jpg" alt="favorites-tie">Favorites</div>
+                <div><img src="../assets/graphic@1.5x.jpg" alt="graphic-tie">Graphic</div>
+                <div><img src="../assets/plaid@1.5x.jpg" alt="plaid-tie">Plaid</div>
+                <div><img src="../assets/silk@1.5x.jpg" alt="silk-tie">Silk</div>
+                <div><img src="../assets/striped@1.5x.jpg" alt="striped-tie">Striped</div>
+            </div>
+            <h1>Start dressing bettter.</h1>
+        </section>
+        <section id="content-container" class="gutters">
+            <div class="product-container">
+                <div id="bow-ties">
+                    <h3>Bow Ties</h3>
+                </div>
+                <div id="pocket-squares">
+                    <h3>Pocket Squares</h3>
+                </div>
+                <div id="tie-bars">
+                    <h3>Tie Bars</h3>
+                </div>
+            </div>
+            <h2>We started designing and selling neckties in 1971.<br>After 44 years, we're still family-owned and operated</h2>
+            <a href="#">View our story</a>
+        </section>
 
-    </section>
+    </main>
+    <footer>
 
-  </main>
-  <footer>
-
-  </footer>
+    </footer>
 </body>
 
 </html>
