--- a/html/index.html
+++ b/html/index.html
@@ -58,7 +58,29 @@
             <h2>We started designing and selling neckties in 1971.<br>After 44 years, we're still family-owned and operated</h2>
             <a href="#">View our story</a>
         </section>
-
+        <section id ="sub-footer" class="gutters">  
+            <div id="weekly-pick" class="sub-footer-box-elements">
+                <h4>Weekly Pick</h4>
+                <img src="../assets/graphic.jpg" alt="graphic-tie">
+                <a href="#">2" Blue, Black, Gray, Yellow and White Graphic Skinny Tie</a>
+            </div>
+            <div id="loop-us-in" class="sub-footer-box-elements">
+                <h4>Loop Us In</h4>
+                <p>Tightly knotted or hanging loose? Fitted suit or selvedge denim? Share your style with us.</p>
+                <div>Sprite</div>
+            </div>
+            <div id="quarterly" class="sub-footer-box-elements">
+                <h4>The Quarterly</h4>
+                <p>Our newsletter is simple and brief for the hard-pressed gentleman.</p>
+                <div class="name-box">Name Search Box</div>
+                <button>Subscribe Me</button>
+            </div>
+            <div id="style-guide" class="sub-footer-box-elements">
+                <h4>Style Guide</h4>
+                <img src="../assets/style-guide@1.5x.jpg" alt="style-guide-img">
+                <p>There are eighty-five ways to <a href="#">knot a tie</a>.<br>We'll show you <a href="#">the essentials</a>.</p>
+            </div>
+        </section>
     </main>
     <footer>
 
