header-container styled. Added links on promotion-containers

--- a/html/index.html
+++ b/html/index.html
@@ -11,21 +11,39 @@
 <body>
     <header>
         <section id="promotion-container" class="gutters">
-            <li class="shipping">Free Shipping!</div>
+            <li class="shipping"><a href="#">Free Shipping!</a></div>
                 <li>Plus Spring Savings:</li>
-                <li>$10 off of $50 order!</li>
-                <li>$20 off of $100 order!</li>
-                <li>$30 off of $150 order!</li>
+                <li><a href="#">$10 off of $50 order!</a></li>
+                <li><a href="#">$20 off of $100 order!</a></li>
+                <li><a href="#">$30 off of $150 order!</a></li>
         </section>
         <section id="header-container" class="gutters">
-            <div class="box-1">
-                Logo
-            </div>
-            <div class="box-2">
-                Nav
-            </div>
-            <div class="box-3">
-                Account
+            <img src="../assets/logo-stack@2x.png" alt="skinny-ties-logo" id="logo">
+            <nav>
+                <ul>
+                    <li><a href="#">Collection</a></li>
+                    <li><a href="#">Color</a></li>
+                    <li><a href="#">Width</a></li>
+                    <li><a href="#">Fabric</a></li>
+                    <li><a href="#">Pattern</a></li>
+                </ul>
+            </nav>
+            <div id="header-right">
+                <div id="account">
+                    <a href="#">Sign In</a>
+                    <a href="#">Register</a>
+                </div>
+                <div id="cart-search-container">
+                    <div id="cart-box">
+                        <div id="cart-sprite"></div>
+                        <div><a href="#">Cart</a></div>
+                        <div id="cart-square"></div>
+                    </div>
+                    <div id="search-container">
+                        <span id="search-sprite"></span>
+                        <input type="text" placeholder="Search">
+                    </div>
+                </div>
             </div>
         </section>
     </header>
