banner-container styled

--- a/html/index.html
+++ b/html/index.html
@@ -60,7 +60,7 @@
                 <div><img src="../assets/silk@1.5x.jpg" alt="silk-tie">Silk</div>
                 <div><img src="../assets/striped@1.5x.jpg" alt="striped-tie">Striped</div>
             </div>
-            <h1>Start dressing bettter.</h1>
+            <h1>Start dressing better.</h1>
         </section>
         <section id="content-container" class="gutters">
             <div class="product-container">
