--- a/html/index.html
+++ b/html/index.html
@@ -64,17 +64,11 @@
         </section>
         <section id="content-container" class="gutters">
             <div class="product-container">
-                <div id="bow-ties">
-                    <h3>Bow Ties</h3>
-                </div>
-                <div id="pocket-squares">
-                    <h3>Pocket Squares</h3>
-                </div>
-                <div id="tie-bars">
-                    <h3>Tie Bars</h3>
-                </div>
+                <div><img src="../assets/bow-ties@1.5x.jpg" alt="bow-ties"></div>
+                <div><img src="../assets/pocket-squares@1.5x.jpg" alt="pocket-squares" class="pocket-squares"></div>
+                <div><img src="../assets/tie-bars@1.5x.jpg" alt="tie-bars"></div>
             </div>
-            <h2>We started designing and selling neckties in 1971.<br>After 44 years, we're still family-owned and operated</h2>
+            <h2>We started designing and selling neckties in 1971.<br>After 44 years, we're still family-owned and operated.</h2>
             <a href="#">View our story</a>
         </section>
         <section id ="sub-footer" class="gutters">  
