--- a/html/index.html
+++ b/html/index.html
@@ -64,9 +64,18 @@
         </section>
         <section id="content-container" class="gutters">
             <div class="product-container">
-                <div><img src="../assets/bow-ties@1.5x.jpg" alt="bow-ties"></div>
-                <div><img src="../assets/pocket-squares@1.5x.jpg" alt="pocket-squares" class="pocket-squares"></div>
-                <div><img src="../assets/tie-bars@1.5x.jpg" alt="tie-bars"></div>
+                <div>
+                    <img src="../assets/bow-ties@1.5x.jpg" alt="bow-ties">
+                    <h3>Bow Ties</h3>
+                </div>
+                <div>
+                    <img src="../assets/pocket-squares@1.5x.jpg" alt="pocket-squares">
+                    <h3>Pocket<br>Squares</h3>
+                    </div>
+                <div>
+                    <img src="../assets/tie-bars@1.5x.jpg" alt="tie-bars">
+                    <h3>Tie Bars</h3>
+                </div>
             </div>
             <h2>We started designing and selling neckties in 1971.<br>After 44 years, we're still family-owned and operated.</h2>
             <a href="#">View our story</a>
@@ -75,18 +84,23 @@
             <div id="weekly-pick" class="sub-footer-box-elements">
                 <h4>Weekly Pick</h4>
                 <img src="../assets/graphic.jpg" alt="graphic-tie">
-                <a href="#">2" Blue, Black, Gray, Yellow and White Graphic Skinny Tie</a>
+                <br>
+                <p><a href="#">2" Blue, Black, Gray, Yellow and White Graphic Skinny Tie</a></p>
             </div>
             <div id="loop-us-in" class="sub-footer-box-elements">
                 <h4>Loop Us In</h4>
                 <p>Tightly knotted or hanging loose? Fitted suit or selvedge denim? Share your style with us.</p>
-                <div>Sprite</div>
+                <div id="social-media-container">
+                    <div id="facebook-sprite"></div>
+                    <div id="pinterest-sprite"></div>
+                    <div id="twitter-sprite"></div>
+                </div>
             </div>
             <div id="quarterly" class="sub-footer-box-elements">
                 <h4>The Quarterly</h4>
                 <p>Our newsletter is simple and brief for the hard-pressed gentleman.</p>
-                <div class="name-box">Name Search Box</div>
-                <button>Subscribe Me</button>
+                <input type="text" placeholder="name@example.com" id="name-input">
+                <button class="subscribe-button">Subscribe Me</button>
             </div>
             <div id="style-guide" class="sub-footer-box-elements">
                 <h4>Style Guide</h4>
@@ -99,36 +113,45 @@
         <section id="footer-container">
             <div id="nav-bottom">
                 <ul>
-                    <li><h5>Shop By</h5></li>
-                    <li>Collection</li>
-                    <li>Color</li>
-                    <li>Width</li>
-                    <li>Fabric</li>
-                    <li>Pattern</li>
+                    <h5>Shop By</h5>
+                    <li><a href="#">Collection</a></li>
+                    <li><a href="#">Color</a></li>
+                    <li><a href="#">Width</a></li>
+                    <li><a href="#">Fabric</a></li>
+                    <li><a href="#">Pattern</a></li>
                 </ul>
                 <ul>
-                    <li><h5>About Us</h5></li>
-                    <li>Our Story</li>
-                    <li>Where to Buy</li>
-                    <li>Wholesale</li>
-                    <li>Offers</li>
+                    <h5>About Us</h5>
+                    <li><a href="#">Our Story</a></li>
+                    <li><a href="#">Where to Buy</a></li>
+                    <li><a href="#">Wholesale</a></li>
+                    <li><a href="#">Offers</a></li>
                 </ul>
                 <ul>
-                    <li><h5>Shop By</h5></li>
-                    <li>How To Wear</li>
-                    <li>How To Tie</li>
-                    <li>Blog</li>
+                    <h5>Shop By</h5>
+                    <li><a href="#">How To Wear</a></li>
+                    <li><a href="#">How To Tie</a></li>
+                    <li><a href="#">Blog</a></li>
                 </ul>
                 <ul>
-                    <li><h5>Help</h5></li>
-                    <li>Contact Us</li>
-                    <li>Shipping Info</li>
-                    <li>Returns</li>
+                    <h5>Help</h5>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Shipping Info</a></li>
+                    <li><a href="#">Returns</a></li>
                 </ul>
             </div>
         
             <div id="contact-us-container">
-                Contact Us
+                <h3>We're here for you.</h3>
+                <div class="contact-us-bottom">
+                    <div class="contact-us-left">
+                        <p>help@skinnyties.com</p>    
+                        <p>877-687-8437</p>                   
+                    </div>
+                    <div class="contact-us-right">
+                        <button class="contact-us-button">Contact Us</button>
+                    </div>
+                </div>
             </div>
         </section>
             
