--- a/html/index.html
+++ b/html/index.html
@@ -145,8 +145,8 @@
                 <h3>We're here for you.</h3>
                 <div class="contact-us-bottom">
                     <div class="contact-us-left">
-                        <p>help@skinnyties.com</p>    
-                        <p>877-687-8437</p>                   
+                        <span>help@skinnyties.com</span>    
+                        <span>877-687-8437</span>                   
                     </div>
                     <div class="contact-us-right">
                         <button class="contact-us-button">Contact Us</button>
@@ -154,10 +154,10 @@
                 </div>
             </div>
         </section>
-            
-            <span>2015 Skinny Ties. All rights reserved.</span>
-            <span>Made by <a href="#">Gravity Department</a></span>
-        
+            <div id="copyright-containter">
+                <span class="copyright">&copy;2015 Skinny Ties. All rights reserved.</span>
+                <span class="copyright">Made by <a href="#">Gravity Department</a></span>
+            </div>
     </footer>
 </body>
 
