added links to index.html

--- a/html/index.html
+++ b/html/index.html
@@ -65,15 +65,15 @@
         <section id="content-container" class="gutters">
             <div class="product-container">
                 <div>
-                    <img src="../assets/bow-ties@1.5x.jpg" alt="bow-ties">
+                    <a href="#"><img src="../assets/bow-ties@1.5x.jpg" alt="bow-ties"></a>
                     <h3>Bow Ties</h3>
                 </div>
                 <div>
-                    <img src="../assets/pocket-squares@1.5x.jpg" alt="pocket-squares">
+                    <a href="#"><img src="../assets/pocket-squares@1.5x.jpg" alt="pocket-squares"></a>
                     <h3>Pocket<br>Squares</h3>
                     </div>
                 <div>
-                    <img src="../assets/tie-bars@1.5x.jpg" alt="tie-bars">
+                    <a href="#"><img src="../assets/tie-bars@1.5x.jpg" alt="tie-bars"></a>
                     <h3>Tie Bars</h3>
                 </div>
             </div>
@@ -83,7 +83,7 @@
         <section id ="sub-footer" class="gutters">  
             <div id="weekly-pick" class="sub-footer-box-elements">
                 <h4>Weekly Pick</h4>
-                <img src="../assets/graphic.jpg" alt="graphic-tie">
+                <a href="#"><img src="../assets/graphic.jpg" alt="graphic-tie"></a>
                 <br>
                 <p><a href="#">2" Blue, Black, Gray, Yellow and White Graphic Skinny Tie</a></p>
             </div>
@@ -91,9 +91,9 @@
                 <h4>Loop Us In</h4>
                 <p>Tightly knotted or hanging loose? Fitted suit or selvedge denim? Share your style with us.</p>
                 <div id="social-media-container">
-                    <div id="facebook-sprite"></div>
-                    <div id="pinterest-sprite"></div>
-                    <div id="twitter-sprite"></div>
+                    <a href="#"><div id="facebook-sprite"></div></a>
+                    <a href="#"><div id="pinterest-sprite"></div></a>
+                    <a href="#"><div id="twitter-sprite"></div></a>
                 </div>
             </div>
             <div id="quarterly" class="sub-footer-box-elements">
@@ -104,7 +104,7 @@
             </div>
             <div id="style-guide" class="sub-footer-box-elements">
                 <h4>Style Guide</h4>
-                <img src="../assets/style-guide@1.5x.jpg" alt="style-guide-img">
+                <a href="#"><img src="../assets/style-guide@1.5x.jpg" alt="style-guide-img"></a>
                 <p>There are eighty-five ways to <a href="#">knot a tie</a>.<br>We'll show you <a href="#">the essentials</a>.</p>
             </div>
         </section>
