added styled borders to index.html

--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,7 @@
                 <li><a href="#">$30 off of $150 order!</a></li>
         </section>
         <section id="header-container" class="gutters">
+             <!--<div class="perforated-border"></div>-->
             <img src="../assets/logo-stack@2x.png" alt="skinny-ties-logo" id="logo">
             <nav>
                 <ul>
@@ -48,6 +49,7 @@
         </section>
     </header>
     <main>
+        <div class="perforated-border"></div>
         <section id="banner-container">
             <div class="ties">
                 <div><img src="../assets/black@1.5x.jpg" alt="black-tie">Black</div>
@@ -80,6 +82,7 @@
             <h2>We started designing and selling neckties in 1971.<br>After 44 years, we're still family-owned and operated.</h2>
             <a href="#">View our story</a>
         </section>
+        <div class="x-border"></div>
         <section id ="sub-footer" class="gutters">  
             <div id="weekly-pick" class="sub-footer-box-elements">
                 <h4>Weekly Pick</h4>
@@ -108,6 +111,7 @@
                 <p>There are eighty-five ways to <a href="#">knot a tie</a>.<br>We'll show you <a href="#">the essentials</a>.</p>
             </div>
         </section>
+        <div class="perforated-border"></div>
     </main>
     <footer class="gutters">
         <section id="footer-container">
