Fixed .gutter size, .ties, and changed nav color

--- a/html/index.html
+++ b/html/index.html
@@ -10,14 +10,14 @@
 
 <body>
     <header>
-        <section id="promotion-container" class="gutters">
+        <section id="promotion-container" class="gutter">
             <li class="shipping"><a href="#">Free Shipping!</a></div>
                 <li>Plus Spring Savings:</li>
                 <li><a href="#">$10 off of $50 order!</a></li>
                 <li><a href="#">$20 off of $100 order!</a></li>
                 <li><a href="#">$30 off of $150 order!</a></li>
         </section>
-        <section id="header-container" class="gutters">
+        <section id="header-container" class="gutter">
              <!--<div class="perforated-border"></div>-->
             <img src="../assets/logo-stack@2x.png" alt="skinny-ties-logo" id="logo">
             <nav>
@@ -51,7 +51,7 @@
     <main>
         <div class="perforated-border"></div>
         <section id="banner-container">
-            <div class="ties">
+            <div class="ties gutter">
                 <div><img src="../assets/black@1.5x.jpg" alt="black-tie">Black</div>
                 <div><img src="../assets/blue@1.5x.jpg" alt="blue-tie">Blue</div>
                 <div><img src="../assets/collegiate@1.5x.jpg" alt="collegiate-tie">Collegiate</div>
@@ -64,7 +64,7 @@
             </div>
             <h1>Start dressing better.</h1>
         </section>
-        <section id="content-container" class="gutters">
+        <section id="content-container" class="gutter">
             <div class="product-container">
                 <div>
                     <a href="#"><img src="../assets/bow-ties@1.5x.jpg" alt="bow-ties"></a>
@@ -83,7 +83,7 @@
             <a href="#">View our story</a>
         </section>
         <div class="x-border"></div>
-        <section id ="sub-footer" class="gutters">  
+        <section id ="sub-footer" class="gutter">  
             <div id="weekly-pick" class="sub-footer-box-elements">
                 <h4>Weekly Pick</h4>
                 <a href="#"><img src="../assets/graphic.jpg" alt="graphic-tie"></a>
@@ -113,7 +113,7 @@
         </section>
         <div class="perforated-border"></div>
     </main>
-    <footer class="gutters">
+    <footer class="gutter">
         <section id="footer-container">
             <div id="nav-bottom">
                 <ul>
