cleaned up code with ID's and Classes. Added Favicon. Cleaned up sub-footer and added padding to copyright.

--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css">
     <link rel="stylesheet" href="../styles/master.css">
     <link href="https://fonts.googleapis.com/css?family=Catamaran:100" rel="stylesheet">
+    <link rel="icon" href="http://skinnyties.com/media/favicon/default/favicon.png">
     <title>Skinny Ties</title>
 </head>
 <body>
@@ -29,18 +30,18 @@
                 </ul>
             </nav>
             <div id="header-right">
-                <div id="account">
+                <div class="account">
                     <a href="#">Sign In</a>
                     <a href="#">Register</a>
                 </div>
                 <div id="cart-search-container">
-                    <div id="cart-box">
-                        <div id="cart-sprite"></div>
+                    <div class="cart-box">
+                        <div class="cart-sprite"></div>
                         <div><a href="#">Cart</a></div>
-                        <div id="cart-square"></div>
+                        <div class="cart-square"></div>
                     </div>
                     <div id="search-container">
-                        <span id="search-sprite"></span>
+                        <span class="search-sprite"></span>
                         <input type="text" placeholder="Search">
                     </div>
                 </div>
@@ -64,7 +65,7 @@
             <h1>Start dressing better.</h1>
         </section>
         <section id="content-container" class="gutter">
-            <div class="product-container">
+            <div id="product-container">
                 <div>
                     <a href="#"><img src="../assets/bow-ties@1.5x.jpg" alt="bow-ties"></a>
                     <h3>Bow Ties</h3>
@@ -72,7 +73,7 @@
                 <div>
                     <a href="#"><img src="../assets/pocket-squares@1.5x.jpg" alt="pocket-squares"></a>
                     <h3>Pocket<br>Squares</h3>
-                    </div>
+                </div>
                 <div>
                     <a href="#"><img src="../assets/tie-bars@1.5x.jpg" alt="tie-bars"></a>
                     <h3>Tie Bars</h3>
@@ -83,28 +84,27 @@
         </section>
         <div class="x-border"></div>
         <section id ="sub-footer" class="gutter">  
-            <div id="weekly-pick" class="sub-footer-box-elements">
+            <div class="sub-footer-box-elements">
                 <h4>Weekly Pick</h4>
-                <a href="#"><img src="../assets/graphic.jpg" alt="graphic-tie"></a>
-                <br>
+                <a href="#"><img src="../assets/graphic.jpg" alt="graphic-tie"></a><br>
                 <p><a href="#">2" Blue, Black, Gray, Yellow and White Graphic Skinny Tie</a></p>
             </div>
-            <div id="loop-us-in" class="sub-footer-box-elements">
+            <div class="sub-footer-box-elements">
                 <h4>Loop Us In</h4>
                 <p>Tightly knotted or hanging loose? Fitted suit or selvedge denim? Share your style with us.</p>
-                <div id="social-media-container">
+                <div class="social-media-container">
                     <a href="#"><div id="facebook-sprite"></div></a>
                     <a href="#"><div id="pinterest-sprite"></div></a>
                     <a href="#"><div id="twitter-sprite"></div></a>
                 </div>
             </div>
-            <div id="quarterly" class="sub-footer-box-elements">
+            <div class="sub-footer-box-elements">
                 <h4>The Quarterly</h4>
                 <p>Our newsletter is simple and brief for the hard-pressed gentleman.</p>
                 <input type="text" placeholder="name@example.com" id="name-input">
                 <button class="subscribe-button">Subscribe Me</button>
             </div>
-            <div id="style-guide" class="sub-footer-box-elements">
+            <div class="sub-footer-box-elements style-guide">
                 <h4>Style Guide</h4>
                 <a href="#"><img src="../assets/style-guide@1.5x.jpg" alt="style-guide-img"></a>
                 <p>There are eighty-five ways to <a href="#">knot a tie</a>.<br>We'll show you <a href="#">the essentials</a>.</p>
@@ -143,7 +143,6 @@
                     <li><a href="#">Returns</a></li>
                 </ul>
             </div>
-        
             <div id="contact-us-container">
                 <h3>We're here for you.</h3>
                 <div class="contact-us-bottom">
@@ -159,9 +158,8 @@
         </section>
             <div id="copyright-containter">
                 <span class="copyright">&copy;2015 Skinny Ties. All rights reserved.</span>
-                <span class="copyright">Made by <a href="#">Gravity Department</a></span>
+                <span class="copyright made-by">Made by <a href="#">Gravity Department</a></span>
             </div>
     </footer>
 </body>
-
 </html>
